projeto menteSã adicionado

--- a/index.html
+++ b/index.html
@@ -161,14 +161,37 @@
                                     <h2>Codify</h2>
                                     <div class="projeto-card-desc-categorias">
                                         <div class="projeto-card-desc-categoria react">React</div>
-                                        <div class="projeto-card-desc-categoria java">Java</div>
+                                        <div class="projeto-card-desc-categoria node">Nodejs</div>
+                                        <div class="projeto-card-desc-categoria express">Express</div>
+                                        <div class="projeto-card-desc-categoria mongodb">MongoDB</div>
                                     </div>  
                                 </div>
                                 <div class="projeto-card-desc-direita">
                                     <p>A Codify visa preparar candidatos para o mercado de trabalho, fornecendo materiais, exercícios e testes técnicos usados por empresas em seus processos seletivos.</p>
                                     <div class="projeto-card-desc-direita-icons">
-                                        <a href="https://www.linkedin.com/posts/davidaugustoo_ibmchallenge-fiap-codify-activity-6934274371674861568-0sV5?utm_source=linkedin_share&utm_medium=member_desktop_web" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                                        <a href="https://github.com/Codifyy-tech" target="_blank"><i class="fab fa-github"></i></a>
                                         <a href="https://codifyy.tech/" target="_blank"><i class="fas fa-link"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                        <div class="projetos-card">
+                            <img src="./assets/images/mentesa.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>MenteSã</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria react">React</div>
+                                        <div class="projeto-card-desc-categoria node">Nodejs</div>
+                                        <div class="projeto-card-desc-categoria express">Express</div>
+                                        <div class="projeto-card-desc-categoria mongodb">MongoDB</div>
+                                    </div>  
+                                </div>
+                                <div class="projeto-card-desc-direita">
+                                    <p>Mente Sã é um software projetado para ajudar psiquiatras a organizarem suas consultas e acompanhamentos com seus pacientes. MenteSã permite o registro de profissionais, bem como dos seus respectivos pacientes.</p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/psychologist-center" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a href="https://psychologist-center-web-se8y-agwqruqeh-d4t-team-3.vercel.app/" target="_blank"><i class="fas fa-link"></i></a>
                                     </div>
                                 </div>
                             </div> 
